we fixed the box shadow on the buttons, And i will make this something else and make another gh pages for it. This customer really isnt interested although he said he was,  I  was  only charging 100 bucks for the domain and setup email but he just doesnt get it.  Its too much, he just wants to remain small time I guess.   So I will leave the other gh pages on for a while for him but wont make any improvements.  I have another job now any ways and a Good lead on another.  So we will break it down and turn it into something else to put on our display,  find someone who apreciates it,  I was just doing the guy a favor.  I had high hopes for this guy,  He will remain a labor person

--- a/src/index.css
+++ b/src/index.css
@@ -265,9 +265,18 @@ body {
      top: 1rem;
      padding-top: 1rem;
      margin-bottom: 3rem;
-   }
+     
+   } 
 
- }
+
+   
+   }
+   .OurReelsBoxTruck, .OldPhoneImage,  .OurReelsBoxMover {          
+    box-shadow: 2px 2px 12px rgba(0, 0, 0, 1);
+   }
+  
+
+ 
 
  @font-face {
   font-family:'Creepster';
